Added ffmpeg output to console